small tweaks/adjustments/bugfixes

--- a/app/bay/page.module.css
+++ b/app/bay/page.module.css
@@ -15,6 +15,13 @@
 .projectList {
   flex: 1;
   min-width: 0;
+  max-width: 100%;
+}
+
+@media (min-width: 768px) {
+  .projectList {
+    max-width: 50%;
+  }
 }
 
 .editForm {
