--- a/app/bay/page.module.css
+++ b/app/bay/page.module.css
@@ -25,9 +25,24 @@
 }
 
 @media (max-width: 767px) {
+  .container {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 0;
+    padding-bottom: 0;
+    background: #f5f5f5;
+  }
+  .content {
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+    display: block;
+  }
   .projectList {
     max-width: 100%;
     width: 100%;
+    margin: 0;
+    padding: 0;
   }
 }
 
