--- a/app/bay/page.module.css
+++ b/app/bay/page.module.css
@@ -86,7 +86,9 @@
 }
 
 .progressSection {
-  margin-bottom: 2rem;
+  margin-bottom: 0.5rem;
+  padding-top: 1rem;
+  background-color: #f5f5f5;
 }
 
 .progressSection h2 {
@@ -160,4 +162,13 @@
 .modalList li {
   margin-bottom: 0.5rem;
   color: #4a5568;
+}
+
+@media (max-width: 767px) {
+  .progressSection {
+    margin-bottom: 0.5rem;
+    padding-top: 1.5rem;
+    padding-bottom: 0.5rem;
+    background-color: #f5f5f5;
+  }
 } 
