--- a/app/bay/page.module.css
+++ b/app/bay/page.module.css
@@ -168,4 +168,19 @@
     padding-bottom: 3rem;
     background-color: #f5f5f5;
   }
+}
+
+@keyframes floatUp {
+  0% {
+    opacity: 0;
+    transform: translateY(0px) scale(0.5);
+  }
+  20% {
+    opacity: 1;
+    transform: translateY(-20px) scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-80px) scale(0.8);
+  }
 } 
